Project

General

Profile

Actions

Bug #11793

closed

mac: cast between incompatible function types

Added by Toomas Soome over 3 years ago. Updated over 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
driver - device drivers
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Build error with gcc 8:

../../common/io/mac/mac_datapath_setup.c: In function 'mac_srs_client_poll_enable':
../../common/io/mac/mac_datapath_setup.c:391:24: error: cast between incompatible function types from 'void (*)(void *)' to 'int (*)(struct __mac_intr_handle *)' [-Werror=cast-function-type]
  mrf.mrf_intr_enable = (mac_intr_enable_t)mac_soft_ring_intr_enable;
                        ^
../../common/io/mac/mac_datapath_setup.c: In function 'mac_srs_create_proto_softrings':
../../common/io/mac/mac_datapath_setup.c:1709:6: error: cast between incompatible function types from 'void (*)(void *)' to 'int (*)(struct __mac_intr_handle *)' [-Werror=cast-function-type]
      (mac_intr_enable_t)mac_soft_ring_intr_enable;
      ^
cc1: all warnings being treated as errors

Testing done: build/install/boot.

Actions #1

Updated by Toomas Soome over 3 years ago

  • Description updated (diff)
Actions #2

Updated by Electric Monk over 3 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 2c465844f6cd2c93703f5788a09237087300a2ac

commit  2c465844f6cd2c93703f5788a09237087300a2ac
Author: Toomas Soome <tsoome@me.com>
Date:   2019-11-14T08:06:10.000Z

    11793 mac: cast between incompatible function types
    Reviewed by: Ryan Zezeski <ryan@zinascii.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF