11793 mac: cast between incompatible function types Reviewed by: Ryan Zezeski <ryan@zinascii.com> Approved by: Dan McDonald <danmcd@joyent.com>